# wakfu-rs

./: Cargo.toml  README.md
certs/: cert.der  cert.pem  identity.p12  root-ca.der  root-ca.key.pem  root-ca.pem  root-ca.srl  server.key.pem
mappings/: 1_82_3
scripts/: generate-certificate.sh
wakfu-agent/: Cargo.toml
wakfu-agent/src/: lib.rs
wakfu-buf/: Cargo.toml
wakfu-buf/src/: lib.rs  read.rs  write.rs
wakfu-buf/wakfu-buf-macros/: Cargo.toml
wakfu-buf/wakfu-buf-macros/src/: lib.rs  read.rs  write.rs
wakfu-client/: Cargo.toml
wakfu-client/src/: main.rs
wakfu-core/: Cargo.toml
wakfu-core/src/: lib.rs
wakfu-protocol/: Cargo.toml
wakfu-protocol/examples/: client.rs  proxy.rs
wakfu-protocol/src/: lib.rs  read.rs
wakfu-protocol/src/packets/: mod.rs
wakfu-protocol/src/packets/connection/: clientbound_dispatch_credentials_authentication_packet.rs  clientbound_dispatch_token_authentication_packet.rs  clientbound_publickey_request_packet.rs  clientbound_version_packet.rs  mod.rs  serverbound_client_ip_packet.rs  serverbound_force_disconnection_reason_packet.rs  serverbound_publickey_packet.rs  serverbound_version_result_packet.rs
wakfu-protocol/wakfu-protocol-macros/: Cargo.toml
wakfu-protocol/wakfu-protocol-macros/src/: lib.rs
wakfu-proxy/: Cargo.toml
wakfu-proxy/src/: main.rs
