[package]
name = "wakfu-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["net", "io-util", "sync", "rt", "rt-multi-thread"] }
wakfu-protocol-macros = { path = "./wakfu-protocol-macros" }
wakfu-buf = { path = "../wakfu-buf" }
thiserror = "1.0.57"
bytes = "1.5.0"
tokio-rustls = "0.25.0"
rustls = "0.23.1"
rustls-pki-types = "1.3.1"
log = "0.4.21"
