[package]
name = "wakfu-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
log = "0.4.21"
rustls = "0.23.1"
rustls-pemfile = "2.1.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = "0.25.0"
wakfu-protocol = { path = "../wakfu-protocol" }
wakfu-buf = { path = "../wakfu-buf" }
